--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "author": {
+    "name": "Jason Williams",
+    "email": "jwill9999@icloud.com"    
+  },
    "repository": {
     "type": "git",
     "url": "https://github.com/escapeimagery/Blog_crud_login.git"
   },
-  "author": "Jason Williams>",
   "license": "MIT",
   "main": "bin/www",
   "dependencies": {
@@ -26,5 +29,13 @@
     "express-validator":"*",
     "moment":"*",
     "mongoose":"*"
-  }
+  },
+  "keywords": [
+    "nodejs",
+    "blog",
+    "expressjs",
+    "signin",
+    "validation",
+    "authentication"
+  ]
 }
